--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "489899c4-1f7b-448b-8037-ae05b2052395",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hands-on Lab: Create your Jupyter Notebook\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -10,7 +32,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f151f3-3e48-4a8a-aea7-81ed33c741eb",
    "metadata": {},
    "source": [
     "## Author\n",
@@ -19,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a07759-3239-48dc-93a6-eaedb7bbe06d",
    "metadata": {},
    "source": [
     "This notebook is part of an assignment for the IBM DS course. In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -27,7 +47,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1f5a40-a869-4743-9fc2-0ff8f7e924e0",
    "metadata": {},
    "source": [
     "**Objectives:**\n",
@@ -39,7 +58,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2362bb-ab04-431b-ab17-7779e4869028",
    "metadata": {},
    "source": [
     "Some of the popular languages that Data Scientists use are:\n",
@@ -51,80 +69,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "76f758a1-647a-47eb-872a-5cd3e8a97b22",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Some of the commonly used libraries used by Data Scientists include:\n",
-    "1. Pandas\n",
-    "2. Numpy\n",
-    "3. Matplotlib\n",
-    "4. Plotly"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "911b105e-be38-4579-8c25-6cc05a3567ea",
-   "metadata": {},
-   "source": [
-    "|Data Science Tools|\n",
-    "-------------------\n",
-    "|Jupyter Notebook|\n",
-    "|RStudio|\n",
-    "|Kaggle|\n",
-    "|Google CoLab|"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "39c940c0-329e-4b5e-8643-34477b1e2460",
-   "metadata": {},
-   "source": [
-    "### Below are a few examples of evaluating arithmetic expressions in Python"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c00aa22e-e886-4ebc-a0f1-8e2a8137be47",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#This a simple arithmetic expression to mutiply then add integers\n",
-    "(3*4)+5"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b0ae75e5-891b-443f-a099-f7f231386479",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.3333333333333335"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#This will convert 200 minutes to hours by diving by 60\n",
-    "200/60"
+    "Copyright ©2024 IBM Corporation. All rights reserved.\n"
    ]
   }
  ],
@@ -145,8 +128,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.4"
-  }
+  },
+  "prev_pub_hash": "9e1985db9844176462bd1d5863048c9f3d17404bbc6a648be9084b0c42b29347"
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
